REGRESSION (r183517): Yellow find-in-page highlight gets stuck forever https://bugs.webkit.org/show_bug.cgi?id=144651 <rdar://problem/20755722>

Reviewed by Dan Bernstein.

* page/mac/TextIndicatorWindow.h:
* page/mac/TextIndicatorWindow.mm:
(WebCore::TextIndicatorWindow::clearTextIndicator):
(WebCore::TextIndicatorWindow::setTextIndicator):
(WebCore::TextIndicatorWindow::closeWindow):
(WebCore::TextIndicatorWindow::startFadeOut):
We can't keep m_fadingOut on TextIndicatorWindow, since it is reused.
Keep it on the WebTextIndicatorView instead.


Canonical link: https://commits.webkit.org/162693@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@183859 268f45cc-cd09-0410-ab3c-d52691b4dbfc