Source/WebCore/page/mac/TextIndicatorWindow.mm
@@ -82,6 +82,8 @@ using namespace WebCore;
 - (void)setAnimationProgress:(float)progress;
 - (BOOL)hasCompletedAnimation;
 
+@property (nonatomic, setter=setFadingOut:) BOOL isFadingOut;
+
 @end
 
 @implementation WebTextIndicatorView
@@ -369,7 +371,7 @@ void TextIndicatorWindow::clearTextIndicator(TextIndicatorDismissalAnimation ani
 {
     RefPtr<TextIndicator> textIndicator = WTF::move(m_textIndicator);
 
-    if (m_fadingOut)
+    if ([m_textIndicatorView isFadingOut])
         return;
 
     if (textIndicator && textIndicator->wantsManualAnimation() && [m_textIndicatorView hasCompletedAnimation] && animation == TextIndicatorDismissalAnimation::FadeOut) {
@@ -385,9 +387,9 @@ void TextIndicatorWindow::setTextIndicator(Ref<TextIndicator> textIndicator, CGR
     if (m_textIndicator == textIndicator.ptr())
         return;
 
-    m_textIndicator = textIndicator.ptr();
-
     closeWindow();
+
+    m_textIndicator = textIndicator.ptr();
 
     CGFloat horizontalMargin = dropShadowBlurRadius * 2 + horizontalBorder;
     CGFloat verticalMargin = dropShadowBlurRadius * 2 + verticalBorder;
@@ -426,7 +428,7 @@ void TextIndicatorWindow::closeWindow()
     if (!m_textIndicatorWindow)
         return;
 
-    if (m_fadingOut)
+    if ([m_textIndicatorView isFadingOut])
         return;
 
     m_temporaryTextIndicatorTimer.stop();
@@ -438,7 +440,7 @@ void TextIndicatorWindow::closeWindow()
 
 void TextIndicatorWindow::startFadeOut()
 {
-    m_fadingOut = true;
+    [m_textIndicatorView setFadingOut:YES];
     RetainPtr<NSWindow> indicatorWindow = m_textIndicatorWindow;
     [m_textIndicatorView hideWithCompletionHandler:[indicatorWindow] {
         [[indicatorWindow parentWindow] removeChildWindow:indicatorWindow.get()];
